--- a/_posts/2010-01-01-post-chat.md
+++ b/_posts/2010-01-01-post-chat.md
@@ -1,10 +1,9 @@
 ---
 title: "Post: Chat"
 categories:
-  - Blog
+  - BlogFormat
 tags:
-  - chat
-  - Post Formats
+  - BlogFormat
 ---
 
 Abbott: Strange as it may seem, they give ball players nowadays very peculiar names.
