--- a/_posts/2010-01-01-post-link.md
+++ b/_posts/2010-01-01-post-link.md
@@ -1,10 +1,10 @@
 ---
 title: "Post: Link"
 categories:
-  - Blog
+  - BlogFormat
 tags:
-  - link
-  - Post Formats
+  - Link
+  - BlogFormat
 link: https://github.com
 ---
 
