--- a/_posts/2010-01-01-post-link.md
+++ b/_posts/2010-01-01-post-link.md
@@ -1,8 +1,15 @@
 ---
-title: "My Partner's Website"
+title: "Post: Link"
+categories:
+  - BlogFormat
 tags:
   - Link
+  - BlogFormat
 link: https://github.com
 ---
 
-Check out my boyfriend's personal website for more insights and projects.
+This theme supports **link posts**, made famous by John Gruber. To use, just add `link: http://url-you-want-linked` to the post's YAML front matter and you're done.
+
+> And this is how a quote looks.
+
+Some [link](#) can also be shown.
